--- a/package.json
+++ b/package.json
@@ -24,14 +24,10 @@
     "@ionic-native/camera": "^4.7.0",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/file": "^4.7.0",
+    "@ionic-native/file-chooser": "^4.7.0",
     "@ionic-native/file-transfer": "^4.7.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
-    "@ionic/storage": "^2.1.3",
-    "angularfire2": "^4.0.0-rc0",
-    "cordova-android": "7.0.0",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-firebase": "^1.0.5",
     "@ionic/storage": "2.1.3",
     "@types/cordova": "0.0.34",
     "@types/cordova-plugin-device": "^1.1.5",
@@ -41,6 +37,8 @@
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-filechooser": "^1.0.1",
+    "cordova-plugin-firebase": "^1.0.5",
     "cordova-plugin-ionic": "^4.1.7",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.19",
@@ -67,15 +65,10 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-firebase": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
       "cordova-plugin-file": {},
       "cordova-plugin-file-transfer": {},
       "cordova-plugin-camera": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-whitelist": {},
       "cordova-plugin-ionic": {
         "APP_ID": "abcd1234",
         "CHANNEL_NAME": "Master",
@@ -83,7 +76,8 @@
         "WARN_DEBUG": "true",
         "UPDATE_API": "https://api.ionicjs.com",
         "MAX_STORE": "2"
-      }
+      },
+      "cordova-plugin-filechooser": {}
     },
     "platforms": [
       "android"
