--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/http": "5.2.10",
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
+    "@ionic-native/base64": "^4.7.0",
     "@ionic-native/camera": "^4.7.0",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/file": "^4.7.0",
     "@ionic-native/file-chooser": "^4.7.0",
+    "@ionic-native/file-path": "^4.7.0",
     "@ionic-native/file-picker": "^4.7.0",
     "@ionic-native/file-transfer": "^4.7.0",
     "@ionic-native/splash-screen": "4.7.0",
@@ -33,12 +35,14 @@
     "@types/cordova": "0.0.34",
     "@types/cordova-plugin-device": "^1.1.5",
     "angularfire2": "^4.0.0-rc0",
+    "com-badrit-base64": "^0.2.0",
     "cordova-android": "^7.0.0",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-filechooser": "^1.0.1",
+    "cordova-plugin-filepath": "^1.3.0",
     "cordova-plugin-filepicker": "^1.1.5",
     "cordova-plugin-firebase": "^1.0.5",
     "cordova-plugin-ionic": "^4.1.7",
@@ -80,7 +84,9 @@
         "MAX_STORE": "2"
       },
       "cordova-plugin-filechooser": {},
-      "cordova-plugin-filepicker": {}
+      "cordova-plugin-filepicker": {},
+      "com-badrit-base64": {},
+      "cordova-plugin-filepath": {}
     },
     "platforms": [
       "android"
