--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/file-path": "^4.7.0",
     "@ionic-native/file-picker": "^4.7.0",
     "@ionic-native/file-transfer": "^4.7.0",
+    "@ionic-native/in-app-browser": "^4.9.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
@@ -45,6 +46,7 @@
     "cordova-plugin-filepath": "^1.3.0",
     "cordova-plugin-filepicker": "^1.1.5",
     "cordova-plugin-firebase": "^1.0.5",
+    "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic": "^4.1.7",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.19",
@@ -86,7 +88,8 @@
       "cordova-plugin-filechooser": {},
       "cordova-plugin-filepicker": {},
       "com-badrit-base64": {},
-      "cordova-plugin-filepath": {}
+      "cordova-plugin-filepath": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "android"
